tests/snapshots/sfc/js/patches__setuplet_assignment_in_click_handler.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 219
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, unref as _unref } from "vue";
import { defineComponent as _defineComponent } from "vue";
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "test",
  setup(__props, { expose: __expose, emit: __emit }) {
    __expose();
    let count = $ref(0);
    const __returned__ = { count };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});
export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return _openBlock(), _createElementBlock("button", { onClick: ($event) => $setup.count.value = _unref($setup.count) + 1 }, _toDisplayString(_unref($setup.count)), 9, ["onClick"]);
}
__sfc__.render = render;
export default __sfc__;
