tests/snapshots/sfc/js/patches__template_only_sfc_without_style.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 219
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
const _sfc_main = {};
const _hoisted_1 = { class: "hello" };
export function render(_ctx, _cache) {
  return _openBlock(), _createElementBlock("div", _hoisted_1, "Hello World");
}
_sfc_main.render = render;
export default _sfc_main;
