tests/snapshots/sfc/js/patches__type_comparison_should_not_be_stripped.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode, unref as _unref } from "vue";
export default {
  __name: "test",
  props: ["type"],
  setup(__props) {
    const props = __props;
    const isButton = props.type === "button";
    const isLink = props.type !== "link";
    return (_ctx, _cache) => {
      return _unref(isButton) ? (_openBlock(), _createElementBlock("button", { key: 0 }, "Button")) : !_unref(isLink) ? (_openBlock(), _createElementBlock("a", {
        key: 1,
        href: "#"
      }, "Link")) : _createCommentVNode("v-if", true);
    };
  }
};
